Resolvi el error de carga de los archivos estaticos

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,11 @@ a {
     color-scheme: dark;
   }
 }
+
+.bg-color-barton{
+  background-color: #2F6F51 !important;
+}
+
+.text-color-barton{
+  color : #FFFFFF !important;
+}
