--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,19 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/* Esto deberia ser remmplazado por la fuenta en los archivos estaticos */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 html,
 body {
+  height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+
 }
 
 * {
@@ -30,16 +22,6 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 
 .bg-color-barton{
   background-color: #2F6F51 !important;
@@ -47,4 +29,14 @@ a {
 
 .text-color-barton{
   color : #FFFFFF !important;
+}
+
+.text-color-barton-brand{
+  color: #2F6F51 !important;
+}
+
+.font-barton{
+  font-family: "Roboto", sans-serif;
+  font-weight: 500 !important;
+  font-style: normal;
 }
