--- a/app/globals.css
+++ b/app/globals.css
@@ -35,8 +35,14 @@ body {
   color: #2F6F51 !important;
 }
 
+
+
+.text-color-barton-brand-second{
+  color :#124734 !important; 
+}
+
 .font-barton{
   font-family: "Roboto", sans-serif;
-  font-weight: 500 !important;
+  font-weight: 500;
   font-style: normal;
 }
