Resolvi el probelma del video. Cambie Iframe por un elemento de Video con un video importado de Public. Hice el boton de play y pausa. Lo unico es que el video que baje tiene un tamaño distinto al espacio, por lo que se redimenciona al hacerle play creando espacio negativo que no se ve pero si haces click podes pausar fuera del video.

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,14 +35,26 @@ body {
   color: #2F6F51 !important;
 }
 
-
+.video::-webkit-media-controls-panel {
+  display: none !important;
+  opacity: 1 !important;}
 
 .text-color-barton-brand-second{
   color :#124734 !important; 
 }
+
 
 .font-barton{
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
+
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 70px solid transparent;
+  border-bottom: 70px solid transparent;
+  border-left: 90px solid white;
+}
+
